add mais exceptions